<resources>
    <string name="app_name">Apsara Office World</string>
    <string name="currency">Rs</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="nav_terms">Terms &amp; Conditions</string>
    <string name="nav_home">Home</string>
    <string name="nav_category">Shop By Category</string>
    <string name="nav_user">User</string>
    <string name="nav_order">My Orders</string>
    <string name="nav_profile">My Profile</string>
    <string name="nav_support">Support</string>
    <string name="nav_about">About Us</string>
    <string name="nav_review">Rate Us</string>
    <string name="nav_share">Share with Friends</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_fruits">Fruits &amp; Vegetables</string>
    <string name="nav_foodgrain">FoodGrains, Oil &amp; Masala</string>
    <string name="et_login_phone_hint">Mobile Number (Required)</string>
    <string name="tv_login_email">Email (Required)</string>
    <string name="tv_login_password">Password (Required)</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    <string name="btn_send">Send</string>
    <string name="tv_login_note">Before continue with application you must verify your mobile number. Our system will sent you OTP code on registered mobile number</string>
    <string name="tv_reg">Register</string>
    <string name="tv_reg_name_hint">Name (Required)</string>
    <string name="tv_reg_pincode">Pincode/Area Code/Zip (Required)</string>
    <string name="tv_reg_socity">Area(Required)</string>
    <string name="btn_reg_socity_choose">Choose area…</string>
    <string name="tv_reg_house">Address (Required)</string>
    <string name="btn_reg_update">Update Profile</string>
    <string name="et_reg_search">Search area…</string>
    <string name="tv_reg_note">Note : service available for RAJKOT only</string>
    <string name="tv_reg_address">Address(Required)</string>
    <string name="et_reg_address">Complete Address</string>
    <string name="tv_cart_title">Cart</string>
    <string name="tv_cart_clear">Clear All Product</string>
    <string name="tv_cart_checkout">Continue Checkout</string>
    <string name="tv_cart_total">Total:\u0020</string>
    <string name="tv_cart_item">Items:\u0020</string>
    <string name="tv_cart_rs">\u0020Rs</string>
    <string name="tv_del_title">Delivery Date/Time</string>
    <string name="tv_del_address">Delivery Address</string>
    <string name="et_del_address_hint">Enter Delivery address..</string>
    <string name="tv_del_continue">Continue With Time</string>
    <string name="tv_del_date">Select delivery date</string>
    <string name="tv_del_time">Select delivery time</string>
    <string name="tv_del_date_time">Delivery Data/Time</string>
    <string name="tv_total_item_amount">Total Items And Amount</string>
    <string name="tv_total_total">Total Amount </string>
    <string name="tv_home_cat">Products</string>
    <string name="tv_home_view">View all </string>
    <string name="tv_home_appname"> AOW </string>
    <string name="tv_pro_add">Add</string>
    <string name="tv_pro_update">Update</string>
    <string name="tv_pro_price">Price per\u0020</string>
    <string name="tv_pro_rs">\u0020Rs.\u0020</string>
    <string name="tv_pro_total">Total: </string>
    <string name="tv_conf_order_title">Payment Details</string>
    <string name="tv_order_cancle">Cancel Order</string>
    <string name="tv_order_summery">Summary</string>
    <string name="tv_order_total">Total: Rs.</string>
    <string name="tv_order_qty">Qty</string>
    <string name="tv_order_rs">Rs.</string>
    <string name="tv_thanks_title">Thank you for your order.</string>
    <string name="tv_thanks_home">Continue home</string>
    <string name="tv_thanks_order">Track my order</string>
    <string name="forgot">Forgot Password ?</string>
    <string name="my_order">My Order</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="delivery">Delivery</string>
    <string name="delivery_date">"Delivery Date: </string>
    <string name="please_select_date">Please select date</string>
    <string name="connection_time_out">Connection Time out</string>
    <string name="add_delivery_address">Add Delivery Address</string>
    <string name="order_now">Order Now</string>
    <string name="payment_detail">Payment Details</string>
    <string name="please_enter_pincode">Please enter pincode</string>
    <string name="receiver_mobile_number">Receiver Mobile Number(Required)</string>
    <string name="receiver_name_req">Receiver Name(Required)</string>
    <string name="invalid_phone_number">Invalid phone number</string>
    <string name="please_add_address">Please add address</string>
    <string name="please_select_address">Please select address</string>
    <string name="please_select_date_time">Please select date and time</string>
    <string name="profile_updated">Profile updated</string>
    <string name="uploading_profile_data">Uploading profile data</string>
    <string name="cancle_order_note">Are you sure!\nyou want to cancle order ?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="thank_you">Thank you</string>
    <string name="password_too_short">Password Too short</string>
    <string name="invalide_email_address">Invalide Email Address</string>
    <string name="no_internet">Sorry! Not connected to internet</string>
    <string name="order_no">Order No :</string>
    <string name="pending">Pending</string>
    <string name="confirm">Confirm</string>
    <string name="delivered">Delivered</string>
    <string name="cancle">Cancle</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="search_msg">Search for 1000+ products</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password (Required)</string>
    <string name="new_password">New Password (Required)</string>
    <string name="confirm_password">Confirm Password (Required)</string>
    <string name="password_not_same">Confirm Password and New Password not same.</string>
    <string name="delivery_charge">Delivery Charges :\u0020</string>
    <string name="amount">Amount:\u0020</string>
    <string name="search_here">Search here…</string>
    <string name="total_amount">Total Amount:\u0020</string>
    <string name="search">Search</string>
    <string name="enter_keyword">Please Enter Keyword</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="Total">Total</string>
    <string name="description">Description:</string>
    <string name="health">Health Benefits</string>
    <string name="how_to_use">How To Use</string>
    <string name="tv_deli_socity">Area:</string>
    <string name="tv_deli_mobile">Mobile No :</string>
    <string name="tv_deli_pin">Pincode:</string>
    <string name="tv_deli_pay_ontime">On time :\u0020</string>
    <string name="tv_deli_pay_address">Address:\u0020</string>
    <string name="reciver_name">Receiver Name :\u0020</string>
    <string name="reciver_mobile">Receiver Mobile No :\u0020</string>
    <string name="pincode">Pincode :\u0020</string>
    <string name="house_no">House No :\u0020</string>
    <string name="socity">Area :\u0020</string>
    <string name="category_name">Category</string>
    <string name="shop_category_name">Shop By Category</string>
    <string name="KNewArrivals">New arrivals</string>
    <string name="product_name">Products</string>
    <string name="products">Products</string>
    <string name="numberofitms">No of Items:</string>
    <string name="offer_name">Offers</string>
    <string name="this_weeks_offers">This Week Offers</string>
    <string name="popular_brands">Popular Brands</string>
    <string name="bestseller">Best Sellers</string>
    <string name="newarrival">New Arrival</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_0">0</string>
    <string name="checkout">Checkout</string>
    <string name="press_again_warn">Press again to exit Apsara app</string>
    <string name="rs">Rs</string>
    <string name="about">About</string>
    <string name="no_of_items">No of items: %s</string>
    <string name="clear_cart">Clear cart</string>
    <string name="delivery_time">Delivery time</string>
    <string name="shop_by_category">Shop By Category</string>
    <string name="coupons">Coupons</string>
    <string name="flat">Flat</string>
    <string name="off">Off</string>
    <string name="apply_coupon">Apply Coupon</string>
    <string name="add_a_coupon_to_apply">Add a coupon to apply</string>
    <string name="coupon_found">Coupon applied successfully</string>
    <string name="coupon_not_found">Unable to find the coupon</string>
    <string name="only_items_allowed">Only %s items allowed per user for this product</string>
    <string name="unable_to_apply_coupon">Unable to apply coupon</string>
    <string name="host">apsaraoffice.com</string>
    <string name="payment_failure_message">Unable to process the request</string>
    <string name="cash_on_delivery">Cash on Delivery</string>
    <string name="pay_online">Pay Online</string>
    <string name="ok">OK</string>
    <string name="try_again">Try Again!</string>
    <string name="cancal">Cancel</string>
    <string name="success">Success!</string>
    <string name="payment">Payment</string>
    <string name="failed">Failed!</string>
    <string name="purchase_has_been_failed_please_try_again">Purchase has been failed please try again</string>
    <string name="purchase_has_been_success">Purchase has been success.</string>
    <string name="product_out_of_stock">Product is out of stock</string>
    <string name="coupon_expired">Coupon has expired</string>
    <string name="see_all">See all</string>
    <string name="out_of_stock">Out of Stock</string>
    <string name="coupon_amount">Coupon Amount :</string>
    <string name="saving_amount">You Saved :</string>
    <string name="sort_by">Sort By</string>
    <string name="price_high">Price High</string>
    <string name="price_low">Price Low</string>
    <string name="a_to_z">A to Z</string>
    <string name="no_internet_connection">No internet connection.</string>
    <string name="coupon_invalid">Invalid Coupon</string>
    <string name="invalid_name">Invalid Name</string>
    <string name="email_empty">Please enter email address</string>
    <string name="enter_valid_email_address">Please enter valid email address</string>
    <string name="password_empty">Please enter password</string>
    <string name="enter_valid_password">Please enter valid password</string>
    <string name="name_is_empty">Please enter name</string>
    <string name="phone_number_is_empty">Please enter mobile number</string>
    <string name="enter_valid_phone_number">Please enter valid mobile number</string>
    <string name="enable_auto_start">Enable AutoStart</string>
    <string name="allow_dad_run_in_background">Please allow Apsara to always run in the background. Our app runs in background else our services can\'t be accessed.</string>
    <string name="allow">ALLOW</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="submit">Submit</string>
    <string name="phone_number_verified">Phone number verified</string>
    <string name="enter_valid_otp">Enter valid otp</string>
    <string name="all_title_tab">ALL</string>
    <string name="gst_charge">Gst Charges(%) :</string>
    <string name="delivery_text">Charges info :</string>
</resources>