<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_home" />

        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_category"
            android:title="@string/shop_by_category" />

        <item
            android:id="@+id/nav_coupon"
            android:icon="@drawable/ic_coupon"
            android:title="@string/coupons" />

        <item
            android:id="@+id/nav_user"
            android:title="@string/nav_user">
            <menu>
                <item
                    android:id="@+id/nav_myorders"
                    android:icon="@drawable/ic_list"
                    android:title="@string/nav_order" />
                <item
                    android:id="@+id/nav_myprofile"
                    android:icon="@drawable/ic_user"
                    android:title="@string/nav_profile" />
            </menu>
        </item>

        <item android:title="@string/app_name">
            <menu>
                <item
                    android:id="@+id/nav_review"
                    android:icon="@drawable/ic_play_store"
                    android:title="@string/nav_review" />
                <item
                    android:id="@+id/nav_support"
                    android:icon="@drawable/ic_support"
                    android:title="@string/nav_support" />
                <item
                    android:id="@+id/nav_policy"
                    android:icon="@drawable/ic_policy"
                    android:title="@string/nav_terms" />
                <item
                    android:id="@+id/nav_aboutus"
                    android:icon="@drawable/ic_about"
                    android:title="@string/nav_about" />
                <!--<item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_nav_share"
                    android:tv_title="@string/nav_share" />-->
            </menu>
        </item>

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/nav_logout" />
    </group>
</menu>
