<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">


        <TextView
            android:id="@+id/tv_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:gravity="center"
            android:text="@string/success"
            android:textColor="@color/colorPrimary"
            android:textSize="48sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_status"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:textColor="@android:color/darker_gray"
            android:textSize="18sp"
            tools:text="Your purchase is success" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_payment_success"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:background="@drawable/rounded_corner_textview"
            android:text="@string/tv_thanks_home"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            tools:visibility="gone" />

        <LinearLayout
            android:id="@+id/ll_tryAgain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:orientation="horizontal"
            android:visibility="gone"
            tools:visibility="visible">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_retry"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner_textview"
                android:text="@string/try_again"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner_textview"
                android:text="@string/cancal"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
        </LinearLayout>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>