<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtPaymentdetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/clouds"
        android:gravity="center_horizontal"
        android:padding="8dp"
        android:text="@string/tv_conf_order_title"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linearLayout2"
        android:layout_below="@+id/txtPaymentdetails">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:id="@+id/card_viewa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardElevation="2dp"
                    app:cardUseCompatPadding="true"
                    app:cardCornerRadius="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/clouds"
                            android:padding="@dimen/space_4"
                            android:text="@string/tv_del_date_time"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/textTimeSlot"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/space_5"
                            android:textStyle="bold" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/card_viewb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardElevation="2dp"
                    app:cardUseCompatPadding="true"
                    app:cardCornerRadius="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView8"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/clouds"
                            android:padding="@dimen/space_4"
                            android:text="@string/tv_del_address"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/txtAddress"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/space_5"
                            android:textStyle="bold" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>


                <android.support.v7.widget.CardView
                    android:id="@+id/card_viewf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardElevation="2dp"
                    app:cardUseCompatPadding="true"
                    app:cardCornerRadius="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/clouds"
                            android:padding="@dimen/space_4"
                            android:text="@string/tv_total_item_amount"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/txtTotal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/space_5"
                            android:textStyle="bold" />

                    </LinearLayout>

                </android.support.v7.widget.CardView>
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_cod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_corner_textview"
            android:text="@string/cash_on_delivery"
            android:textColor="@color/white" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_pay_online"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_corner_textview"
            android:text="@string/pay_online"
            android:textColor="@color/white" />
    </LinearLayout>

</RelativeLayout>