<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lite_gray">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tv_search_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/login_edittext"
            android:backgroundTint="@color/colorPrimaryDark"
            android:drawableLeft="@drawable/ic_search"
            android:drawablePadding="@dimen/activity_horizontal_margin"
            android:drawableStart="@drawable/ic_search"
            android:ems="10"
            android:gravity="center_vertical"
            android:hint="@string/search_msg"
            android:maxLines="1"
            android:padding="8dp"
            android:textColor="@android:color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp" />

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.daimajia.slider.library.SliderLayout
                    android:id="@+id/sliderLayout"
                    android:layout_width="match_parent"
                    android:layout_height="130dp" />

                <com.daimajia.slider.library.Indicators.PagerIndicator
                    android:id="@+id/custom_indicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/space_6"
                    android:text="@string/shop_category_name"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="10dp"
                    android:background="@color/lite_gray" />

                <ImageView
                    android:id="@+id/iv_ad2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:minHeight="150dp" />

                <android.support.design.widget.TabLayout
                    android:id="@+id/tab_layout"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    app:tabGravity="center"
                    app:tabIndicatorColor="@color/colorPrimary"
                    app:tabMode="fixed"
                    app:tabSelectedTextColor="@color/colorPrimary"
                    app:tabTextColor="@color/black" />

                <android.support.v4.view.ViewPager
                    android:id="@+id/view_pager"
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    android:background="@color/lite_gray" />

                <ImageView
                    android:id="@+id/iv_ad1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:minHeight="150dp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:gravity="center"
                        android:padding="@dimen/space_6"
                        android:text="@string/this_weeks_offers"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp" />


                    <TextView
                        android:id="@+id/tv_see_all_offers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:background="@drawable/rounded_corner_textview"
                        android:gravity="center_vertical"
                        android:padding="8dp"
                        android:text="@string/see_all"
                        android:textColor="@android:color/white" />
                </RelativeLayout>


                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_offers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/space_6"
                    android:text="@string/popular_brands"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_popular_brands"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp" />

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        tools:visibility="gone">

        <ProgressBar
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_centerInParent="true" />
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>
